--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch --trace-warnings src/index.js"
+    "dev": "node --watch --trace-warnings src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [
     "backend",
